--- a/nodes/dxl-event-out.html
+++ b/nodes/dxl-event-out.html
@@ -43,7 +43,7 @@
 <script type="text/x-red" data-help-name="dxl-core-event out">
     <p>Delivers an event message with the <code>msg.payload</code> from the input message to the DXL fabric.</p>
     <p>Event messages are sent by one publisher and received by one or more recipients that are currently subscribed to the topic associated with the event (otherwise known as one-to-many).
-    For more information on message types, how they are delivered to remote clients, etc., see the <a href="https://opendxl.github.io/opendxl-client-python/pydoc/dxlclient.message.html">message documentation</a> in the OpenDXL Python client SDK.</p>
+    For more information on message types, how they are delivered to remote clients, etc., see the <a href="https://opendxl.github.io/opendxl-client-javascript/jsdoc/Message.html">message documentation</a> in the OpenDXL JavaScript client SDK.</p>
     <h3>Inputs</h3>
     <dl class="message-properties">
        <dt>payload <span class="property-type">string | buffer</span></dt>
