--- a/nodes/dxl-event-in.html
+++ b/nodes/dxl-event-in.html
@@ -51,7 +51,7 @@
     <p>Subscribes for event messages to the specific topic on the DXL fabric.
     When an event message is received from DXL, a corresponding new message is injected into a flow.</p>
     <p>Event messages are sent by one publisher and received by one or more recipients that are currently subscribed to the topic associated with the event (otherwise known as one-to-many).
-    For more information on message types, how they are delivered to remote clients, etc., see the <a href="https://opendxl.github.io/opendxl-client-python/pydoc/dxlclient.message.html">message documentation</a> in the OpenDXL Python client SDK.</p>
+    For more information on message types, how they are delivered to remote clients, etc., see the <a href="https://opendxl.github.io/opendxl-client-javascript/jsdoc/Message.html">message documentation</a> in the OpenDXL JavaScript client SDK.</p>
     <h3>Outputs</h3>
     <dl class="message-properties">
        <dt>payload <span class="property-type">string | buffer</span></dt>
@@ -61,10 +61,10 @@
        <dd> The topic to publish the message to.</dd>
 
        <dt>dxlEvent <span class="property-type">dxl-client.Event</d></span></dt>
-       <dd> The <a href="https://opendxl.github.io/opendxl-client-javascript/Event.html" target="_blank">Event</a> object received from the DXL client for the published event.</dd>
+       <dd> The <a href="https://opendxl.github.io/opendxl-client-javascript/jsdoc/Event.html" target="_blank">Event</a> object received from the DXL client for the published event.</dd>
 
        <dt>dxlMessage <span class="property-type">dxl-client.Message</d></span></dt>
-       <dd> The <a href="https://opendxl.github.io/opendxl-client-javascript/Event.html" target="_blank">Event</a> object received from the DXL client for the published event.</dd>
+       <dd> The <a href="https://opendxl.github.io/opendxl-client-javascript/jsdoc/Event.html" target="_blank">Event</a> object received from the DXL client for the published event.</dd>
     </dl>
     <h3>Details</h3>
     <p><i>Client</i> is the configuration node for the DXL client through which the event subscription should be sent and event notifications should be received.
@@ -75,5 +75,5 @@
     If the value is set to <i>a binary buffer</i>, the raw binary Buffer received in the DXL event payload is forwarded along.
     If the value is set to <i>a UTF-8 string</i>, the binary Buffer is decoded from UTF-8 octets into a String.
     If the value is set to <i>a parsed JSON object</i>, the binary Buffer is decoded into a UTF-8 string and parsed as JSON text into an Object.
-    If an error occurs when attempting to convert the binary Buffer of the payload into the desired data type, the current flow is halted with an error.</dd>
+    If an error occurs when attempting to convert the binary Buffer of the payload into the desired data type, the current flow is halted with an error.
 </script>
