--- a/nodes/dxl-client.html
+++ b/nodes/dxl-client.html
@@ -122,7 +122,12 @@
 <script type="text/x-red" data-help-name="dxl-client">
     <p>The minimum DXL client configuration only requires a client configuration file and associated certificate and key files that the Node-RED server can access. For more information on obtaining all of the files needed for a DXL client configuration see the <a href="https://opendxl.github.io/opendxl-client-javascript/jsdoc/tutorial-provisioning.html" target="_blank">provisioning documentation</a> in the OpenDXL JavaScript client SDK.</p>
     <h3>Node Properties</h3>
-    <p><i>Name</i> is only used for display purposes in the Node-RED user interface.</p>
-    <p><i>Keep alive</i> is the maximum period in seconds between communications with a connected broker. If no other messages are being exchanged, this controls the rate at which the client will send ping messages to the broker.</p>
-    <p><i>Reconnect delay</i> is the delay between connection retry attempts in seconds.</p>
+    <dl class="message-properties">
+        <dt>Name</dt>
+        <dd> Used only for display purposes in the Node-RED user interface.</dd>
+        <dt>Keep alive</dt>
+        <dd> Maximum period in seconds between communications with a connected broker. If no other messages are being exchanged, this controls the rate at which the client will send ping messages to the broker.</dd>
+        <dt>Reconnect delay</dt>
+        <dd> Delay between connection retry attempts in seconds.</dd>
+    </dl>
 </script>
