--- a/nodes/dxl-event-out.html
+++ b/nodes/dxl-event-out.html
@@ -46,17 +46,20 @@
     For more information on message types, how they are delivered to remote clients, etc., see the <a href="https://opendxl.github.io/opendxl-client-javascript/jsdoc/Message.html">message documentation</a> in the OpenDXL JavaScript client SDK.</p>
     <h3>Inputs</h3>
     <dl class="message-properties">
-       <dt>payload <span class="property-type">string | buffer</span></dt>
-       <dd> The application-specific payload of the message.</dd>
-       <dt class="optional">dxlTopic <span class="property-type">string</span></dt>
-       <dd> The topic to publish the event message to.</dd>
+        <dt>payload <span class="property-type">string | buffer</span></dt>
+        <dd> Application-specific payload of the message.</dd>
+        <dt class="optional">dxlTopic <span class="property-type">string</span></dt>
+        <dd> Topic to publish the event message to.</dd>
     </dl>
     <h3>Node Properties</h3>
-    <p><i>Client</i> is the configuration node for the DXL client through which the event should be sent.
-    Click on the pencil icon to add or modify a client configuration.</p>
-    <p><i>Topic</i> is the topic to publish the event message to.
-    If the value is empty, the topic will be derived from the input message's <code>msg.dxlTopic</code> property.</p>
-    <p><i>Name</i> is only used for display purposes in the Node-RED user interface.</p>
+    <dl class="message-properties">
+        <dt>Client</dt>
+        <dd> Configuration node for the DXL client through which the event should be sent. Click on the pencil icon to add or modify a client configuration.</dt>
+        <dt>Topic</dt>
+        <dd> Topic to publish the event message to. If the value is empty, the topic will be derived from the input message's <code>msg.dxlTopic</code> property.</dd>
+        <dt>Name</dt>
+        <dd> Used only for display purposes in the Node-RED user interface.</dd>
+    </dl>
     <h3>Details</h3>
     <p><code>msg.payload</code> is used as the payload of the published message.
     If it contains an Object, it will be converted to a JSON string before being sent.
