Use nodes:add event for auto client association
Previously, in order for a node containing a DXL client property to be
able to have a client config node automatically associated at node add
time, the node had to reference a DXL.validators.client function
set as the validator for the client property. In this commit, the auto
client association logic is all encapsulated within the client config
node itself, relying upon the nodes:add Node-RED event to determine when
nodes containing DXL client properties have been added to a flow. This
change should make it easier for DXL client consuming nodes to take
advantage of the auto client association logic. This commit removes the
entire DXL global namespace and the associated DXL.validators.client
function references from all nodes.

--- a/nodes/dxl-client.html
+++ b/nodes/dxl-client.html
@@ -1,58 +1,4 @@
 <script type="text/javascript">
-  var DXL = {}
-
-  DXL._getClientIds = function () {
-    var clientIds = []
-    RED.nodes.eachConfig(function (node) {
-      if (node.id && (node.type === 'dxl-client')) {
-        clientIds.push(node.id)
-      }
-    })
-    return clientIds
-  }
-
-  DXL._setNodeClientId = function (node, clientId) {
-    if (node.client !== clientId) {
-      node.client = clientId
-      if (RED.nodes.updateConfigNodeUsers) {
-        RED.nodes.updateConfigNodeUsers(node)
-      }
-      if (RED.editor.validateNode) {
-        RED.editor.validateNode(node)
-      }
-    }
-  }
-
-  DXL._updateNodeClientIds = function (clientId) {
-    RED.nodes.eachNode(function (node) {
-      if (node.type) {
-        var nodeType = RED.nodes.getType(node.type)
-        if (nodeType &&
-          nodeType.defaults &&
-          nodeType.defaults.client &&
-          nodeType.defaults.client.type === 'dxl-client') {
-          DXL._setNodeClientId(node, clientId)
-        }
-      }
-    })
-  }
-
-  DXL.validators = {
-    client: function (node) {
-      var valid = false
-      var clientIds = DXL._getClientIds()
-      if (clientIds.indexOf(node.client) >= 0) {
-        valid = true
-      } else if (clientIds.length === 1) {
-        DXL._setNodeClientId(node, clientIds[0])
-        valid = true
-      }
-      return valid
-    }
-  }
-</script>
-
-<script type="text/javascript">
   RED.nodes.registerType('dxl-client', {
     category: 'config',
     defaults: {
@@ -74,27 +20,89 @@
         $('#node-config-input-reconnectDelay').val(this.reconnectDelay)
       }
     },
-    oneditsave: function () {
-      var node = this
-      var clientIds = DXL._getClientIds()
-      if (clientIds.indexOf(this.id) < 0) {
-        if (clientIds.length === 0) {
-          setTimeout(function () { DXL._updateNodeClientIds(node.id) }, 0)
+    oneditdelete: function () {
+      var clientType = RED.nodes.getType('dxl-client')
+      if (clientType) {
+        var clientIds = clientType._getClientIds()
+        var curIdPos = clientIds.indexOf(this.id)
+        if (curIdPos < 0) {
+          if (clientIds.length === 1) {
+            clientType._updateNodeClientIds(clientIds[0])
+          }
+        } else if (clientIds.length === 2) {
+          clientType._updateNodeClientIds(clientIds[curIdPos ? 0 : 1])
         }
-      } else if (clientIds.length === 1) {
-        DXL._updateNodeClientIds(this.id)
       }
     },
-    oneditdelete: function () {
-      var clientIds = DXL._getClientIds()
-      var curIdPos = clientIds.indexOf(this.id)
-      if (curIdPos < 0) {
-        if (clientIds.length === 1) {
-          DXL._updateNodeClientIds(clientIds[0])
-        }
-      } else if (clientIds.length === 2) {
-        DXL._updateNodeClientIds(clientIds[curIdPos ? 0 : 1])
+    onpaletteadd: function () {
+      var that = this
+      this._getClientIds = function () {
+        var clientIds = []
+        RED.nodes.eachConfig(function (node) {
+          if (node.id && (node.type === 'dxl-client')) {
+            clientIds.push(node.id)
+          }
+        })
+        return clientIds
       }
+      this._getClientKeys = function (node) {
+        var clientKeys = []
+        if (node.type) {
+          var nodeType = RED.nodes.getType(node.type)
+          if (nodeType && nodeType.defaults) {
+            Object.keys(nodeType.defaults).forEach(function (key) {
+              var item = nodeType.defaults[key]
+              if (typeof item === 'object' && item.type === 'dxl-client') {
+                clientKeys.push(key)
+              }
+            })
+          }
+        }
+        return clientKeys
+      }
+      this._setNodeClientId = function (node, clientKeys, clientId,
+                                        revalidate) {
+        clientKeys.forEach(function (key) {
+          if (node[key] !== clientId) {
+            node[key] = clientId
+            if (RED.nodes.updateConfigNodeUsers) {
+              RED.nodes.updateConfigNodeUsers(node)
+            }
+            if (revalidate && RED.editor.validateNode) {
+              RED.editor.validateNode(node)
+            }
+          }
+        })
+      }
+      this._updateNodeClientIds = function (clientId) {
+        RED.nodes.eachNode(function (node) {
+          var clientKeys = that._getClientKeys(node)
+          if (clientKeys.length > 0) {
+            that._setNodeClientId(node, clientKeys, clientId, true)
+          }
+        })
+      }
+      this._onAddNode = function (node) {
+        var clientIds
+        if (node.type === 'dxl-client') {
+          clientIds = that._getClientIds()
+          if (clientIds.length === 1) {
+            that._updateNodeClientIds(clientIds[0])
+          }
+        } else {
+          var clientKeys = that._getClientKeys(node)
+          if (clientKeys.length > 0) {
+            clientIds = that._getClientIds()
+            if (clientIds.length === 1) {
+              that._setNodeClientId(node, clientKeys, clientIds[0], false)
+            }
+          }
+        }
+      }
+      RED.events.on('nodes:add', this._onAddNode)
+    },
+    onpaletteremove: function () {
+      RED.events.off('nodes:add', this._onAddNode)
     },
     paletteLabel: 'dxl client'
   })
