--- a/nodes/dxl-event-out.html
+++ b/nodes/dxl-event-out.html
@@ -4,10 +4,7 @@
     defaults: {
       name: {value: ''},
       topic: {value: ''},
-      client: {type: 'dxl-client',
-        required: false,
-        validate: function () { return DXL.validators.client(this) }
-      }
+      client: {type: 'dxl-client', required: true}
     },
     color: '#b3d2e3',
     inputs: 1,
