--- a/nodes/dxl-service.html
+++ b/nodes/dxl-service.html
@@ -11,10 +11,7 @@
       defaults: {
         name: {value: ''},
         serviceType: {value: '', required: true},
-        client: {type: 'dxl-client',
-          required: false,
-          validate: function () { return DXL.validators.client(this) }
-        },
+        client: {type: 'dxl-client', required: true},
         rules: {value: [{payloadType: 'txt', topic: ''}]},
         outputs: {value: 1}
       },
