Add extractProperty/ies NodeUtils functions
This commit adds a couple of utility functions - extractProperty and
extractProperties - which can be used for removing one or more
properties from an object and obtaining the values for those properties.
These are generally expected to be used by nodes for reading properties
from an incoming msg and removing the properties from the outgoing msg
to avoid polluting the msg that might be received by downstream nodes of
the same type.

--- a/nodes/dxl-request.html
+++ b/nodes/dxl-request.html
@@ -66,6 +66,7 @@
         <dt>dxlMessage <span class="property-type">dxl-client.Message</d></span></dt>
         <dd> <a href="https://opendxl.github.io/opendxl-client-javascript/jsdoc/Response.html" target="_blank">Response</a> or <a href="https://opendxl.github.io/opendxl-client-javascript/jsdoc/ErrorResponse.html" target="_blank">ErrorResponse</a> object received from the DXL client for the request message.</dd>
     </dl>
+    <p>The <code>dxlTopic</code> property is removed, if present, from the output message.</p>
     <h3>Node Properties</h3>
     <dl class="message-properties">
         <dt>Client</dt>
