Updating docs for 6f220d2

--- a/jsdoc/tutorial-installation.html
+++ b/jsdoc/tutorial-installation.html
@@ -57,8 +57,8 @@ directory for Node-RED.</p>
 <pre class="prettyprint source lang-sh"><code>cd ~/.node-red</code></pre><p>For Windows, run the following command:</p>
 <pre class="prettyprint source lang-sh"><code>cd %HOMEPATH%\.node-red</code></pre><p>To install the library from a local tarball for a Mac or Linux-based operating
 system, run the following command:</p>
-<pre class="prettyprint source lang-sh"><code>npm install lib/opendxl-node-red-contrib-dxl-0.1.0.tgz --save</code></pre><p>To install the library from a local tarball for Windows, run:</p>
-<pre class="prettyprint source lang-sh"><code>npm install lib\opendxl-node-red-contrib-dxl-0.1.0.tgz --save</code></pre><p>To install the library via the
+<pre class="prettyprint source lang-sh"><code>npm install ./lib/opendxl-node-red-contrib-dxl-0.1.0.tgz --save</code></pre><p>To install the library from a local tarball for Windows, run:</p>
+<pre class="prettyprint source lang-sh"><code>npm install .\lib\opendxl-node-red-contrib-dxl-0.1.0.tgz --save</code></pre><p>To install the library via the
 <a href="https://www.npmjs.com/package/@opendxl/node-red-contrib-dxl">npm package registry</a>,
 run the following command:</p>
 <pre class="prettyprint source lang-sh"><code>npm install @opendxl/node-red-contrib-dxl --save</code></pre><p>After you restart Node-RED and browse to the Node-RED web interface, you should
