Updating docs for ebe1110

--- a/jsdoc/index.html
+++ b/jsdoc/index.html
@@ -51,6 +51,9 @@ invoking/providing services.</p>
 <h2>Installation</h2><ul>
 <li><a href="tutorial-installation.html">Library Installation</a></li>
 </ul>
+<h2>Configuration</h2><ul>
+<li><a href="tutorial-configuration.html">Client Configuration</a></li>
+</ul>
 <h2>Samples</h2><ul>
 <li><a href="tutorial-samples.html">Samples</a></li>
 </ul>
