--- a/nodes/dxl-client.html
+++ b/nodes/dxl-client.html
@@ -7,6 +7,7 @@
       keepAliveInterval: {value: 1800, validate: RED.validators.number()},
       reconnectDelay: {value: 1, validate: RED.validators.number()}
     },
+    icon: 'opendxl.png',
     label: function () {
       return this.name || 'dxl client'
     },
