--- a/nodes/dxl-client.html
+++ b/nodes/dxl-client.html
@@ -132,6 +132,8 @@
     <p>The minimum DXL client configuration only requires a client configuration file and associated certificate and key files that the Node-RED server can access. For more information on obtaining all of the files needed for a DXL client configuration see the <a href="https://opendxl.github.io/opendxl-client-javascript/jsdoc/tutorial-provisioning.html" target="_blank">provisioning documentation</a> in the OpenDXL JavaScript client SDK.</p>
     <h3>Node Properties</h3>
     <dl class="message-properties">
+        <dt>Config file</dt>
+        <dd> Path to the DXL client configuration file. If this value is a directory, the node will attempt to load a file named <code>dxlclient.config</code> within the directory.</dd>
         <dt>Name</dt>
         <dd> Used only for display purposes in the Node-RED user interface.</dd>
         <dt>Keep alive</dt>
