--- a/jsdoc/lib_node-utils.js.html
+++ b/jsdoc/lib_node-utils.js.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>JSDoc: Source: node-utils.js</title>
+    <title>JSDoc: Source: lib/node-utils.js</title>
 
     <script src="scripts/prettify/prettify.js"> </script>
     <script src="scripts/prettify/lang-css.js"> </script>
@@ -17,7 +17,7 @@
 
 <div id="main">
 
-    <h1 class="page-title">Source: node-utils.js</h1>
+    <h1 class="page-title">Source: lib/node-utils.js</h1>
 
     
 
@@ -124,7 +124,7 @@ module.exports = {
 </div>
 
 <nav>
-    <h2><a href="index.html">Home</a></h2><h3>Modules</h3><ul><li><a href="module-MessageUtils.html">MessageUtils</a></li><li><a href="module-NodeUtils.html">NodeUtils</a></li></ul><h3>Externals</h3><ul><li><a href="external-Message.html">Message</a></li></ul><h3>Tutorials</h3><ul><li><a href="tutorial-configuration.html">Client Configuration</a></li><li><a href="tutorial-installation.html">Library Installation</a></li><li><a href="tutorial-samples.html">Samples</a></li></ul>
+    <h2><a href="index.html">Home</a></h2><h3>Modules</h3><ul><li><a href="module-MessageUtils.html">MessageUtils</a></li><li><a href="module-NodeUtils.html">NodeUtils</a></li></ul><h3>Externals</h3><ul><li><a href="external-DxlClient.html">DxlClient</a></li><li><a href="external-DxlError.html">DxlError</a></li><li><a href="external-Event.html">Event</a></li><li><a href="external-Message.html">Message</a></li><li><a href="external-Request.html">Request</a></li><li><a href="external-Response.html">Response</a></li><li><a href="external-ServiceRegistrationInfo.html">ServiceRegistrationInfo</a></li></ul><h3>Classes</h3><ul><li><a href="module.exports-DxlClientNode.html">DxlClientNode</a></li><li><a href="module.exports-DxlEventInNode.html">DxlEventInNode</a></li><li><a href="module.exports-DxlEventOutNode.html">DxlEventOutNode</a></li><li><a href="module.exports-DxlRequestNode.html">DxlRequestNode</a></li><li><a href="module.exports-DxlResponseNode.html">DxlResponseNode</a></li><li><a href="module.exports-DxlServiceNode.html">DxlServiceNode</a></li></ul><h3>Tutorials</h3><ul><li><a href="tutorial-configuration.html">Client Configuration</a></li><li><a href="tutorial-installation.html">Library Installation</a></li><li><a href="tutorial-samples.html">Samples</a></li></ul>
 </nav>
 
 <br class="clear">
