--- a/jsdoc/nodes_dxl-client.js.html
+++ b/jsdoc/nodes_dxl-client.js.html
@@ -26,7 +26,12 @@
     
     <section>
         <article>
-            <pre class="prettyprint source linenums"><code>'use strict'
+            <pre class="prettyprint source linenums"><code>/**
+ * @module DxlClient
+ * @description Implementation of the `dxl-client` node
+ */
+
+'use strict'
 
 var fs = require('fs')
 var path = require('path')
@@ -261,7 +266,7 @@ module.exports = function (RED) {
      *   topics (no filtering).
      * @param {Function} eventCallback - Callback function which should be
      *   invoked for a matching message. The first argument passed to the
-     *   callback function is the {@link Event} object.
+     *   callback function is the [Event]{@link external:Event} object.
      */
     this.addEventCallback = function (topic, eventCallback) {
       node.dxlClient.addEventCallback(topic, eventCallback)
@@ -270,7 +275,8 @@ module.exports = function (RED) {
     /**
      * Removes an event callback from the client for the specified topic. This
      * method must be invoked with the same arguments as when the callback was
-     * originally registered via {@link DxlClientNode#addEventCallback}.
+     * originally registered via
+     * [addEventCallback]{@link module:DxlClient~DxlClientNode#addEventCallback}.
      * @param {String} topic - The topic to remove the callback for.
      * @param {Function} eventCallback - The event callback to be removed for
      *   the specified topic.
@@ -293,7 +299,7 @@ module.exports = function (RED) {
      *   [Response]{@link external:Response} message is received by the client.
      * @throws {external:DxlError} If no prior attempt has been made to connect
      *   the client. This could occur if no prior call has been made to
-     *   {@link DxlClientNode#registerUserNode}.
+     *   [registerUserNode]{@link module:DxlClient~DxlClientNode#registerUserNode}.
      */
     this.asyncRequest = function (request, responseCallback) {
       node.dxlClient.asyncRequest(request, responseCallback)
@@ -302,10 +308,10 @@ module.exports = function (RED) {
     /**
      * Attempts to deliver the specified [Event]{@link external:Event} message
      * to the DXL fabric.
-     * @param {external:Event} event - The {@link Event} to send.
+     * @param {external:Event} event - The {@link external:Event} to send.
      * @throws {external:DxlError} If no prior attempt has been made to connect
      *   the client. This could occur if no prior call has been made to
-     *   {@link DxlClientNode#registerUserNode}.
+     *   [registerUserNode]{@link module:DxlClient~DxlClientNode#registerUserNode}.
      */
     this.sendEvent = function (event) {
       node.dxlClient.sendEvent(event)
@@ -320,7 +326,7 @@ module.exports = function (RED) {
      *   [Response]{@link external:Response} to send.
      * @throws {external:DxlError} If no prior attempt has been made to connect
      *   the client. This could occur if no prior call has been made to
-     *   {@link DxlClientNode#registerUserNode}.
+     *   [registerUserNode]{@link module:DxlClient~DxlClientNode#registerUserNode}.
      */
     this.sendResponse = function (response) {
       node.dxlClient.sendResponse(response)
@@ -341,8 +347,8 @@ module.exports = function (RED) {
      * @returns {external:ServiceRegistrationInfo} An object containing
      *   information for the registered service. This value should be supplied
      *   in the corresponding call to
-     *   {@link DxlClientNode#unregisterServiceAsync} when the service should be
-     *   unregistered.
+     *   [unregisterServiceAsync]{@link module:DxlClient~DxlClientNode#unregisterServiceAsync}.
+     *   when the service should be unregistered.
      */
     this.registerServiceAsync = function (serviceType, callbacksByTopic) {
       var serviceInfo = new ServiceRegistrationInfo(node.dxlClient,
@@ -390,7 +396,7 @@ module.exports = function (RED) {
 </div>
 
 <nav>
-    <h2><a href="index.html">Home</a></h2><h3>Modules</h3><ul><li><a href="module-MessageUtils.html">MessageUtils</a></li><li><a href="module-NodeUtils.html">NodeUtils</a></li></ul><h3>Externals</h3><ul><li><a href="external-DxlClient.html">DxlClient</a></li><li><a href="external-DxlError.html">DxlError</a></li><li><a href="external-Event.html">Event</a></li><li><a href="external-Message.html">Message</a></li><li><a href="external-Request.html">Request</a></li><li><a href="external-Response.html">Response</a></li><li><a href="external-ServiceRegistrationInfo.html">ServiceRegistrationInfo</a></li></ul><h3>Classes</h3><ul><li><a href="module.exports-DxlClientNode.html">DxlClientNode</a></li><li><a href="module.exports-DxlEventInNode.html">DxlEventInNode</a></li><li><a href="module.exports-DxlEventOutNode.html">DxlEventOutNode</a></li><li><a href="module.exports-DxlRequestNode.html">DxlRequestNode</a></li><li><a href="module.exports-DxlResponseNode.html">DxlResponseNode</a></li><li><a href="module.exports-DxlServiceNode.html">DxlServiceNode</a></li></ul><h3>Tutorials</h3><ul><li><a href="tutorial-configuration.html">Client Configuration</a></li><li><a href="tutorial-installation.html">Library Installation</a></li><li><a href="tutorial-samples.html">Samples</a></li></ul>
+    <h2><a href="index.html">Home</a></h2><h3>Modules</h3><ul><li><a href="module-DxlClient.html">DxlClient</a></li><li><a href="module-MessageUtils.html">MessageUtils</a></li><li><a href="module-NodeUtils.html">NodeUtils</a></li></ul><h3>Externals</h3><ul><li><a href="external-DxlClient.html">DxlClient</a></li><li><a href="external-DxlError.html">DxlError</a></li><li><a href="external-Event.html">Event</a></li><li><a href="external-Message.html">Message</a></li><li><a href="external-Request.html">Request</a></li><li><a href="external-Response.html">Response</a></li><li><a href="external-ServiceRegistrationInfo.html">ServiceRegistrationInfo</a></li></ul><h3>Classes</h3><ul><li><a href="module-DxlClient-DxlClientNode.html">DxlClientNode</a></li></ul><h3>Tutorials</h3><ul><li><a href="tutorial-configuration.html">Client Configuration</a></li><li><a href="tutorial-installation.html">Library Installation</a></li><li><a href="tutorial-samples.html">Samples</a></li></ul>
 </nav>
 
 <br class="clear">
